--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -1,1 +1,57 @@
-<link rel="stylesheet" href="./assets/style.css">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Prework Study Guide</title>
+  </head>
+  <body>
+    <header id="top">
+      <h1>Prework Study Guide</h1>
+      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+    </header>
+    <main>
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents the visible content shown to the user</li>
+          <li>The h1 through h6 elements should be used sequentially</li>
+          <li>The h1 element should only be used once per page</li>
+        </ul>
+      </section>
+      
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Cascading Style Sheets help to make the webpage more visually appealing</li>
+          <li>Enter more CSS notes here</li>
+        </ul>
+
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Enter Git notes here</li>
+        </ul>
+
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li>Enter Javascript notes here</li>
+        </ul>
+        
+      </section>
+
+    </main>
+
+    <footer>
+      <p>I can code!</p>
+    </footer>
+  </body>
+</html>
