added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -27,7 +27,8 @@
         <h2>CSS</h2>
         <ul>
           <li>Cascading Style Sheets help to make the webpage more visually appealing</li>
-          <li>Enter more CSS notes here</li>
+          <li>Colors can be identified semantically or by hexadecimal code</li>
+          <li>CSS rules can be applied in different ways</li>
         </ul>
 
       </section>
@@ -36,6 +37,7 @@
         <h2>Git</h2>
         <ul>
           <li>Enter Git notes here</li>
+          <li>Look up Github Copilot as additional resource</li>
         </ul>
 
       </section>
